--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -176,3 +176,10 @@ body {
   font-family: monospace;
   font-size: 1rem;
 }
+
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0px 1000px #000 inset !important;
+  -webkit-text-fill-color: var(--foreground) !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
